KeyCache and more memAllocs